# FlightControllerUI

./: CMakeLists.txt  resources.qrc
src/: CMakeLists.txt
src/AppController/: CMakeLists.txt  CMakeLists.txt.autosave  main.cpp
src/Assets/: CMakeLists.txt
src/Core/: CMakeLists.txt
src/Core/SensorDataReader/: CMakeLists.txt
src/Theme/: CMakeLists.txt
src/UI/: CMakeLists.txt
